
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100px"
            android:paddingTop="10px"
            android:textSize="30sp"
            android:text="@string/text_Title_activity"
            android:layout_gravity="center_horizontal"/>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:textSize="20sp"
                android:text="@string/TextDateDepart"/>

            <CalendarView
                android:id="@+id/calendar"
                android:layout_margin="10dp"
                android:paddingBottom="30dp"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:textSize="20sp"
                android:text="@string/TextNbPersonne"/>
            <EditText

                android:layout_marginLeft="55dp"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="120dp"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ellipsize="start"
                android:id="@+id/idNbPersonne"
                android:text="@string/text_modif_nbPassager"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:textSize="20sp"
                android:text="@string/TextHeureDepart"/>
            <EditText

                android:layout_marginLeft="55dp"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="120dp"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ellipsize="start"
                android:id="@+id/idHeureDepart"
                android:text="@string/text_modif_heure"
                android:inputType="text"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>