<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20dp"
            android:paddingTop="10dp"
            android:id='@+id/lblTitreRechercheTrajet'
            android:text="@string/lblPageRecherche"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblPointDepart"
            android:text="@string/lblRecherchePointA"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"/>

        <EditText
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:id="@+id/txtPointA" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblPointArrive"
            android:text="@string/lblRecherchePointB"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"/>

        <EditText
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:id="@+id/txtPointB" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblDate1"
            android:text="@string/lblRechercheDateA"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"/>

        <CalendarView
            android:id="@+id/calendar"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblDate2"
            android:text="@string/lblRechercheDateB"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"/>

        <CalendarView
            android:id="@+id/idCalendrier"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRechercher"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:textStyle="bold"
            android:text="@string/lblBtnRechercher"
            android:onClick="onClickRechercher"/>
    </LinearLayout>
</ScrollView>