
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1" >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.dinfogarneau.cours03e.ecotrajet.ajout_trajet">


        <fragment  xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            tools:context=".ajout_trajet"
            tools:layout="@layout/activity_ajout_trajet" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:textSize="20sp"
                android:text="@string/TextDateDepart"/>

            <CalendarView
                android:id="@+id/calendar"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:textSize="20sp"
                android:text="@string/TextNbPersonne"/>
            <EditText

                android:layout_marginLeft="55dp"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="120dp"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ellipsize="start"
                android:id="@+id/idNbPersonne"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:textSize="20sp"
                android:text="@string/TextHeureDepart"/>
            <EditText

                android:layout_marginLeft="55dp"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="120dp"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ellipsize="start"
                android:id="@+id/idHeureDepart"
                android:inputType="text"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>